# bayrob

./: .buildinfo  .gitignore  .readthedocs.yaml  Dockerfile  Makefile  README.md  bibliography.html  caloconf  docker-compose.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pyproject.toml.bck  requirements.txt  run.sh  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  jekyll-gh-pages.yml
_sources/autoapi/: index.rst
_sources/dev/: intro.rst  plan_refinement.rst
autoapi/: index.html
autoapi/bayrob/: index.html
dev/: intro.html  learning.html  plan_refinement.html  reasoning.html
doc/: _config.yml  index.md  justfile  references.bib  requirements.txt
doc/_src/: css.typ  once.typ  struct.typ
doc/dev/: intro.rst  learning.rst  reasoning.rst
doc/setup/: installation.md
doc/source/: apidoc.rst  conf.py  conf_old.py  developers.rst  for_developers.rst  for_users.rst  index.rst  refs.bib  setup.rst  users.rst
docs/: _config.yml  _toc.yml  bibliography.md  index.md  justfile  requirements.txt
docs/_old/: _config.yml  requirements.txt
docs/_src/: excerpt.typ  helpers.typ  js.typ  mod.typ
docs/dev/: plan_refinement.rst  reasoning.rst
docs/setup/: installation.md
docs/source/: index.md
docs/user/: intro.md  plan_refinement.md  reasoning.md
examples/: config.txt  config.yaml  examples.py
examples/gpgp/: 000-gpgp.json
examples/gridagent/: 000-gridagent.py  gridagent-MOVE.tree  gridagent-TURN.tree  gridagent.py
examples/move/: move.py  robotaction_move.py
examples/move_exp/: move.py
examples/paperexample/: paperexample.py
examples/perception/: perception.py
examples/pr2/: pr2.py
examples/robotaction/: 000-robotaction-mini.py  000-robotaction.py  robotaction.py
examples/robotaction-mini/: 000-robotaction-mini.py
examples/robotaction_turn/: robotaction_turn.py
examples/turn/: robotaction_turn.py  turn.py
setup/: installation.html
src/bayrob/: config.py
src/calo/: config.py
src/calo/core/: base.py  (+5 more)
test/: calotest.py  test_actions.py  test_astar.py  test_astar_jpt_gpgp.py  test_astar_jpt_gridworld.py  test_astar_jpt_roboaction.py  test_astar_jpt_robotaction.py  test_caloastar.py  test_query.py  test_robotpos.py  test_thesis_plots.py  test_utils.py
user/: intro.html  plan_refinement.html  reasoning.html
(+123 files in other folders)
