[build-system]
requires = [
    "setuptools>=67.8.0",
    "wheel",
    "Cython>=3.0.0",
    "numpy>=1.24.3,<2.0.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "bayrob"
version = "0.1.0"
authors = [
  { name="Mareike Picklum", email="mareikep@cs.uni-bremen.de" },
]
description = "joint probability distributions to generate action models from robot experience data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords=["Probabilistic Inference", "Robotics", "action model"]
dynamic = ["version", "dependencies"]

[project.urls]
"Source" = 'https://github.com/mareikep/bayrob'
"Bug Tracker" = 'https://github.com/mareikep/bayrob/issues'

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["bayrob*"]

[tool.setuptools.dynamic]
version = {attr = "bayrob.__version__"}
dependencies = {file = "requirements.txt"}

#[tool.pytest.ini_options]
#log_cli = true
#log_cli_level = "DEBUG"
#log_cli_format = "%(asctime)s - %(levelname)8s - %(message)s"
#log_cli_date_format = "%Y-%m-%d %H:%M:%S"